--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <div class="DSMovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                    <img src="img/fullstar.svg" alt="Star">
+                                    <img src="img/fuhttps://www.google.com/url?sa=i&url=https%3A%2F%2Fa2filmes.com.br%2F&psig=AOvVaw0maMoXsdKJm65ytlf5Fm_w&ust=1733315799470000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqGAoTCID6suDOi4oDFQAAAAAdAAAAABCkAQllstar.svg" alt="Star">
                                     <img src="img/fullstar.svg" alt="Star">
                                     <img src="img/fullstar.svg" alt="Star">
                                     <img src="img/midstar.svg" alt="Star">
@@ -287,13 +287,4 @@
                                 <a class="DSMovie-btn" href="form.html">Avaliar</a>
                             </div>
                         </div>
-                    </div>
-                </div>           
-            </div>
-       
-        </section>
-    </main>
-
-</body>
-
-</html>
+    
